fix how links looks like whenever the content is too long

--- a/views/style/style.css
+++ b/views/style/style.css
@@ -65,12 +65,17 @@ body{
 }
 
 .resource .name {
+  width:60%;
   display: table-cell;
-  width: 25%;
+  word-break: break-all;
+  word-break: break-word;
 }
+
 .resource .title {
+  width: 30%;
   display: table-cell;
-  width: 40%;
+  text-align: left;
+  padding-left: 10px;
 }
 .resource .name a {
   color: #999999;
@@ -82,7 +87,8 @@ body{
   color: black;
 }
 .resource .menu {
-  float: right;
+  width: 10%;
+  display: table-cell;
   color: #666666;
   font-size: 0.9em;
 }
